# claudedev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ISSUES_CREATED.md  LICENSE  MASTERPLAN.md  README.md  RESEARCH.md  RESEARCH_ACADEMIC_AI_BRAIN.md  RESEARCH_AI_BRAIN_PATTERNS.md  RESEARCH_CLAUDE_CODE_DEEP.md  RESEARCH_MACOS_TOOLUSE.md  RESEARCH_OPENCLAW_DEEP.md  V02_AI_BRAIN_ARCHITECTURE.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: com.claudedev.daemon.plist  settings.example.toml
diagrams/: 01-nexus-architecture-overview.puml  02-memory-fabric-data-flow.puml  03-perception-data-flow.puml  04-execution-data-flow.puml  05-deliberation-data-flow.puml  06-memory-mind-map-tiers.puml  07-issue-improvement-flow.puml  08-autonomous-po-decision-tree.puml  09-three-execution-modes.puml  10-without-with-claudedev.puml  11-hook-architecture.puml  12-brain-in-the-loop.puml  13-dual-auth-architecture.puml  14-macos-native-architecture.puml  15-tool-hierarchy.puml  16-implementation-roadmap.puml  17-compound-effect.puml
migrations/: env.py
migrations/versions/: 0001_baseline_empty.py  0002_add_worktree_path_and_claude_session_id.py  0003_add_unique_constraint_to_tracked_issues.py
scripts/: fix_issue_252.py  install.sh  migrate_sqlite_to_pg.py  uninstall.sh
src/claudedev/: __init__.py  auth.py  cli.py  config.py
tests/: __init__.py  conftest.py  test_credentials.py  test_discovery.py  test_gh_client.py  test_hooks_api.py  test_issue_engine.py  test_live_session.py  test_models.py  test_orchestrator.py  test_paths.py  test_resume_session.py  test_security.py  test_state.py  test_steering_manager.py  test_team_engine.py  test_webhook_cleanup.py  test_webhook_server.py  test_websocket_manager.py  test_worktree_manager.py
tests/brain/: conftest.py  test_auto_responder.py  test_autoresponder_integration.py  test_claude_bridge.py  test_config.py  (+11 more)
(+61 files in other folders)
